# Honkai_Impact_3rd_menu_mod

./: HOW_TO_USE_PROJECT.md  MENU_MOD_APK.md  README.md  README_EN.md  USE_PROJECT.md  build.gradle  gradle.properties  local.properties  tutorial.docx
Patched_APK/: url.md
android/: classes3.dex
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hook.cpp  hook.h  log.h  main.cpp
app/src/main/cpp/Dobby/include/: dobby.h
app/src/main/cpp/Menu/: Menu.h  Setup.h
app/src/main/cpp/xdl/: CMakeLists.txt  xdl.c  xdl.map.txt  xdl_linker.c  xdl_linker.h  xdl_lzma.c  xdl_lzma.h  xdl_util.c
app/src/main/java/com/android/support/: CrashHandler.java  Launcher.java  Main.java  MainActivity.java  Menu.java  PmsHook.java  Preferences.java
app/src/main/jni/: CMakeLists.txt  hook.cpp  hook.h  jni.cpp  log.h  main.cpp  obfuscate.h  safe.cpp  safe.h
app/src/main/jni/Menu/: Menu.h  Setup.h
app/src/main/jni/xdl/: xdl_iterate.c  xdl_iterate.h  xdl_util.h
app/src/main/jni/xdl/include/: xdl.h
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
assets/: libArcher  libSaber
gradle/wrapper/: gradle-wrapper.properties
smali/com/android/support/: BuildConfig.smali  CrashHandler$1.smali  CrashHandler.smali  Launcher$1.smali  Launcher.smali  Main.smali  MainActivity.smali  Menu$$ExternalSyntheticLambda0.smali  Menu$1.smali  Menu$10.smali  Menu$11.smali  Menu$12.smali  Menu$13$1.smali  Menu$13$2.smali  Menu$13$3.smali  Menu$13.smali  Menu$14$1.smali  Menu$14$2.smali  Menu$14$3.smali  Menu$14.smali  Menu$15.smali  Menu$16.smali  Menu$17.smali  Menu$2.smali  Menu$3.smali  Menu$4.smali  Menu$5.smali  Menu$6.smali  Menu$7.smali  Menu$8.smali  Menu$9.smali  Menu.smali  Preferences.smali  R$color.smali  R$drawable.smali  R$layout.smali  R$mipmap.smali  R$string.smali  R$style.smali  R.smali
官服6.4直装/: url.md
